[gd_scene load_steps=6 format=2]

[ext_resource path="res://HabbitTracker.gd" type="Script" id=1]
[ext_resource path="res://Object.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlusButton.png" type="Texture" id=3]
[ext_resource path="res://PopupScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://backarrow.png" type="Texture" id=5]

[node name="HabbitTracker" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Node2D" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="Button"]
position = Vector2( 274, 626 )
scale = Vector2( 0.02, 0.02 )
normal = ExtResource( 3 )

[node name="Home" type="TouchScreenButton" parent="Button"]
position = Vector2( 299, 11 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 5 )

[node name="PopupScene" parent="." instance=ExtResource( 4 )]
margin_left = 44.0
margin_top = -57.0
margin_right = 44.0
margin_bottom = -57.0

[node name="Sliders" type="Node" parent="."]

[node name="Object" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Button/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Button/Home" to="." method="_on_Home_pressed"]
